[gd_scene load_steps=4 format=3 uid="uid://dij32j0wvxvx1"]

[ext_resource type="Script" uid="uid://cmngrutsjny1t" path="res://scripts/ui/combat/post_combat_summary.gd" id="1_ehtwm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o7a6a"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.08, 0.07, 0.12, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.35, 0.6, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i37du"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.12, 0.1, 0.18, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.35, 0.3, 0.5, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="PostCombatSummary" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ehtwm")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.65)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_o7a6a")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "VICTORY!"
horizontal_alignment = 1

[node name="Sep1" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="RewardsSection" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="XPRow" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBox/RewardsSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="XPIconLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox/RewardsSection/XPRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "‚öîÔ∏è XP:"

[node name="XPValueLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox/RewardsSection/XPRow"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "+0"

[node name="XPBarRow" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBox/RewardsSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LevelLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox/RewardsSection/XPBarRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.55, 0.85, 1)
theme_override_font_sizes/font_size = 14
text = "Lv 1"

[node name="XPBar" type="ProgressBar" parent="CenterContainer/Panel/MarginContainer/VBox/RewardsSection/XPBarRow"]
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
size_flags_horizontal = 3
show_percentage = false

[node name="NextLevelLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox/RewardsSection/XPBarRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.55, 0.85, 1)
theme_override_font_sizes/font_size = 14
text = "Lv 2"

[node name="LevelUpLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox/RewardsSection"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "‚ú® LEVEL UP! ‚ú®"
horizontal_alignment = 1

[node name="GoldRow" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBox/RewardsSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GoldIconLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox/RewardsSection/GoldRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üí∞ Gold:"

[node name="GoldValueLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox/RewardsSection/GoldRow"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "+0"

[node name="Sep2" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="LootSection" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LootHeader" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox/LootSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Items Found"
horizontal_alignment = 1

[node name="LootScroll" type="ScrollContainer" parent="CenterContainer/Panel/MarginContainer/VBox/LootSection"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="LootGrid" type="GridContainer" parent="CenterContainer/Panel/MarginContainer/VBox/LootSection/LootScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 3

[node name="ItemDetailPanel" type="PanelContainer" parent="CenterContainer/Panel/MarginContainer/VBox"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i37du")

[node name="DetailMargin" type="MarginContainer" parent="CenterContainer/Panel/MarginContainer/VBox/ItemDetailPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="DetailVBox" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBox/ItemDetailPanel/DetailMargin"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="DetailHeader" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBox/ItemDetailPanel/DetailMargin/DetailVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DetailIcon" type="TextureRect" parent="CenterContainer/Panel/MarginContainer/VBox/ItemDetailPanel/DetailMargin/DetailVBox/DetailHeader"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="DetailNameVBox" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBox/ItemDetailPanel/DetailMargin/DetailVBox/DetailHeader"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DetailNameLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox/ItemDetailPanel/DetailMargin/DetailVBox/DetailHeader/DetailNameVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Item Name"

[node name="DetailSlotLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox/ItemDetailPanel/DetailMargin/DetailVBox/DetailHeader/DetailNameVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 13
text = "Slot ‚Äî Rarity"

[node name="DetailAffixList" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBox/ItemDetailPanel/DetailMargin/DetailVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ContinueButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Continue"
